ISSUE-#98 Rename class, add scrollbar when overflowing

--- a/src/components/SlidePanel/SlidePanel.module.css
+++ b/src/components/SlidePanel/SlidePanel.module.css
@@ -1,16 +1,9 @@
-.slidepanel
+.slidePanel
 {
   width: 15%;
   height: 100%;
 
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  overflow-y: auto;
 
   border-right: 1px solid black;
-}
-
-.slidepanel::-webkit-scrollbar
-{
-  display: none;
 }
